# aemo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/aemo_forecast/: __init__.py  aemo_csv.py  charts.py  cli.py  market_notice.py  nemweb.py  pipeline.py  site.py
src/aemo_forecast_publisher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_aemo_csv.py  test_charts.py  test_market_notice.py  test_nemweb.py  test_pipeline.py  test_site.py
