[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aemo-forecast-publisher"
version = "0.1.0"
description = "Publish AEMO regional forecast data and market notices to a static site."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
aemo-publish = "aemo_forecast.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

